# data_quality_soda

./: app.py  pyproject.toml  test_to_db.ipynb  wordline_velocity_dq_results.json
.streamlit/: config.toml
